// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders components/input/demo/autosize-textarea.tsx extend context correctly 1`] = `
Array [
  <textarea
    class="ant-input ant-input-outlined css-var-test-id ant-input-css-var"
    placeholder="Autosize height based on content lines"
    style="resize: none; height: 2px;"
  />,
  <div
    style="margin: 24px 0px;"
  />,
  <textarea
    class="ant-input ant-input-outlined css-var-test-id ant-input-css-var"
    placeholder="Autosize height with minimum and maximum number of lines"
    style="resize: none; max-height: -8px;"
  />,
  <div
    style="margin: 24px 0px;"
  />,
  <textarea
    class="ant-input ant-input-outlined css-var-test-id ant-input-css-var"
    placeholder="Controlled autosize"
    style="resize: none; min-height: -2px; max-height: -6px;"
  />,
]
`;

exports[`renders components/input/demo/autosize-textarea.tsx extend context correctly 2`] = `[]`;

exports[`renders components/input/demo/borderless-debug.tsx extend context correctly 1`] = `
<div
  style="background-color: rgba(0, 0, 128, 0.2);"
>
  <input
    class="ant-input ant-input-borderless css-var-test-id ant-input-css-var"
    placeholder="Unbordered"
    type="text"
    value=""
  />
  <input
    class="ant-input ant-input-lg ant-input-borderless css-var-test-id ant-input-css-var"
    placeholder="Unbordered"
    type="text"
    value=""
  />
  <textarea
    class="ant-input ant-input-borderless css-var-test-id ant-input-css-var"
    placeholder="Unbordered"
  />
  <span
    class="ant-input-affix-wrapper ant-input-textarea-affix-wrapper ant-input-textarea-allow-clear ant-input-borderless css-var-test-id ant-input-css-var"
  >
    <textarea
      class="ant-input"
      placeholder="Unbordered"
    />
    <span
      class="ant-input-suffix"
    >
      <button
        class="ant-input-clear-icon ant-input-clear-icon-hidden"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
  <span
    class="ant-input-affix-wrapper ant-input-borderless css-var-test-id ant-input-css-var"
  >
    <input
      class="ant-input"
      placeholder="Unbordered"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      <button
        class="ant-input-clear-icon ant-input-clear-icon-hidden"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
  <span
    class="ant-input-affix-wrapper ant-input-borderless css-var-test-id ant-input-css-var"
  >
    <span
      class="ant-input-prefix"
    >
      ￥
    </span>
    <input
      class="ant-input"
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      RMB
    </span>
  </span>
  <span
    class="ant-input-affix-wrapper ant-input-disabled ant-input-affix-wrapper-disabled ant-input-borderless css-var-test-id ant-input-css-var"
  >
    <span
      class="ant-input-prefix"
    >
      ￥
    </span>
    <input
      class="ant-input ant-input-disabled"
      disabled=""
      type="text"
      value=""
    />
    <span
      class="ant-input-suffix"
    >
      RMB
    </span>
  </span>
  <span
    class="ant-input-affix-wrapper ant-input-textarea-affix-wrapper ant-input-textarea-allow-clear ant-input-outlined css-var-test-id ant-input-css-var"
    style="border: 2px solid rgb(0, 0, 0);"
  >
    <textarea
      class="ant-input"
    />
    <span
      class="ant-input-suffix"
    >
      <button
        class="ant-input-clear-icon ant-input-clear-icon-hidden"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>
  <input
    class="ant-input ant-input-borderless ant-input-status-error css-var-test-id ant-input-css-var"
    type="text"
    value="error"
  />
  <input
    class="ant-input ant-input-borderless ant-input-status-warning css-var-test-id ant-input-css-var"
    type="text"
    value="warning"
  />
  <span
    class="ant-input-affix-wrapper ant-input-borderless ant-input-status-error css-var-test-id ant-input-css-var"
  >
    <span
      class="ant-input-prefix"
    >
      $
    </span>
    <input
      class="ant-input"
      type="text"
      value="error"
    />
  </span>
  <span
    class="ant-input-affix-wrapper ant-input-borderless ant-input-status-warning css-var-test-id ant-input-css-var"
  >
    <span
      class="ant-input-prefix"
    >
      $
    </span>
    <input
      class="ant-input"
      type="text"
      value="warning"
    />
  </span>
</div>
`;

exports[`renders components/input/demo/borderless-debug.tsx extend context correctly 2`] = `[]`;

exports[`renders components/input/demo/search-input-loading.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-space-compact ant-input-search css-var-test-id"
  >
    <input
      class="ant-input ant-input-outlined css-var-test-id ant-input-css-var ant-input-compact-item ant-input-compact-first-item"
      placeholder="input search loading default"
      type="search"
      value=""
    />
    <button
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-icon-only ant-btn-loading ant-btn-compact-item ant-btn-compact-last-item ant-input-search-btn"
      type="button"
    >
      <span
        class="ant-btn-icon ant-btn-loading-icon"
      >
        <span
          aria-label="loading"
          class="anticon anticon-loading anticon-spin"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-space-compact ant-input-search css-var-test-id ant-input-search-with-button"
  >
    <input
      class="ant-input ant-input-outlined css-var-test-id ant-input-css-var ant-input-compact-item ant-input-compact-first-item"
      placeholder="input search loading with enterButton"
      type="search"
      value=""
    />
    <button
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-primary ant-btn-variant-solid ant-btn-loading ant-btn-compact-item ant-btn-compact-last-item ant-input-search-btn"
      type="button"
    >
      <span
        class="ant-btn-icon ant-btn-loading-icon"
      >
        <span
          aria-label="loading"
          class="anticon anticon-loading anticon-spin"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-space-compact ant-input-search css-var-test-id ant-input-search-large ant-input-search-with-button"
  >
    <input
      class="ant-input ant-input-lg ant-input-outlined css-var-test-id ant-input-css-var ant-input-compact-item ant-input-compact-first-item"
      placeholder="input search text"
      type="search"
      value=""
    />
    <button
      class="ant-btn css-var-test-id ant-btn-default ant-btn-color-primary ant-btn-variant-solid ant-btn-lg ant-btn-loading ant-btn-compact-item ant-btn-compact-last-item ant-input-search-btn"
      type="button"
    >
      <span
        class="ant-btn-icon ant-btn-loading-icon"
      >
        <span
          aria-label="loading"
          class="anticon anticon-loading anticon-spin"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="loading"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
            />
          </svg>
        </span>
      </span>
      <span>
        Search
      </span>
    </button>
  </div>,
]
`;

exports[`renders components/input/demo/search-input-loading.tsx extend context correctly 2`] = `[]`;

exports[`renders components/input/demo/textarea-resize.tsx extend context correctly 1`] = `
Array [
  <button
    class="ant-btn css-var-test-id ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
    style="margin-bottom: 16px;"
    type="button"
  >
    <span>
      Auto Resize: false
    </span>
  </button>,
  <textarea
    class="ant-input ant-input-outlined css-var-test-id ant-input-css-var"
    rows="4"
  >
    The autoSize property applies to textarea nodes, and only the height changes automatically. In addition, autoSize can be set to an object, specifying the minimum number of rows and the maximum number of rows. The autoSize property applies to textarea nodes, and only the height changes automatically. In addition, autoSize can be set to an object, specifying the minimum number of rows and the maximum number of rows.
  </textarea>,
  <span
    class="ant-input-affix-wrapper ant-input-textarea-affix-wrapper ant-input-textarea-allow-clear ant-input-outlined css-var-test-id ant-input-css-var"
    style="width: 93px;"
  >
    <textarea
      class="ant-input"
    />
    <span
      class="ant-input-suffix"
    >
      <button
        class="ant-input-clear-icon ant-input-clear-icon-hidden"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            fill-rule="evenodd"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
            />
          </svg>
        </span>
      </button>
    </span>
  </span>,
  <br />,
  <span
    class="ant-input-affix-wrapper ant-input-textarea-affix-wrapper ant-input-textarea-show-count ant-input-show-count ant-input-outlined css-var-test-id ant-input-css-var"
    data-count="0"
    style="resize: both;"
  >
    <textarea
      class="ant-input"
      style="resize: both;"
    />
    <span
      class="ant-input-suffix"
    >
      <span
        class="ant-input-data-count"
      >
        0
      </span>
    </span>
  </span>,
  <br />,
  <textarea
    aria-describedby="test-id"
    class="ant-input ant-input-outlined css-var-test-id ant-input-css-var"
    placeholder="TextArea wrapped in Tooltip for debugging"
    style="margin-top: 16px;"
  />,
  <div
    class="ant-tooltip ant-zoom-big-fast-appear ant-zoom-big-fast-appear-prepare ant-zoom-big-fast ant-tooltip-css-var css-var-test-id ant-tooltip-placement-top"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
  >
    <div
      class="ant-tooltip-arrow"
      style="position: absolute; bottom: 0px; left: 0px;"
    >
      <span
        class="ant-tooltip-arrow-content"
      />
    </div>
    <div
      class="ant-tooltip-container"
      id="test-id"
      role="tooltip"
    >
      Debug TextArea with Tooltip
    </div>
  </div>,
]
`;

exports[`renders components/input/demo/textarea-resize.tsx extend context correctly 2`] = `[]`;
